Fix: display timestamp but leaks and dont work infinite loop and some unknow time display

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,8 @@
 NAME = ./philo
 CC = /bin/cc
-CFLAGS = -Wall -Wextra -Werror -g -pthread 
+CFLAGS = -Wall -Wextra -Werror -g 
+#-fsanitize=thread
+#-fsanitize=thread 
 
 GREEN = \033[0;32m
 YELLOW = \033[0;33m
