FIx: time work, but died and lask arg not

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/philo/philo",
-            "args": ["5", "800", "200", "200", "7"],
+            "args": ["5", "100", "200", "200"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/philo",
             "environment": [],
