Chnge stute en refactor

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Philosphers-42Project-Tester/errors_log
 Philosphers-42Project-Tester/preview.png
 Philosphers-42Project-Tester/README.md
 Philosphers-42Project-Tester/start.sh
+gggg/
