--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,7 @@
 NAME = ./philo
 CC = /bin/cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror -g 
+#-fsanitize=thread
 #-fsanitize=thread 
 
 GREEN = \033[0;32m
@@ -8,9 +9,9 @@ YELLOW = \033[0;33m
 RED = \033[0;31m
 NC = \033[0m
 
-SRC = check_args.c main.c philo.c utils.c \
-init_philo.c print_utils.c routine_philo.c \
-time_utils.c \
+SRC = parsing.c main.c philo.c utils.c \
+init.c print.c routine.c \
+time.c cleanup.c \
 
 OBJ_DIR = ./obj
 OBJ = $(SRC:%.c=$(OBJ_DIR)/%.o)
