refactor code to enable thread sanitization and handle 1 philo

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,9 @@
             "type": "shell",
             "command": "make",
             "args": [
-                "all"
+                "-g",
+                "all",
+                "-fsanitize=thread"
             ],
             "group": {
                 "kind": "build",
