refactor code to enable thread sanitization and handle 1 philo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,8 @@
 		"system_error": "c",
 		"functional": "c",
 		"tuple": "c",
-		"type_traits": "c"
+		"type_traits": "c",
+		"philo.h": "c"
 	},
 	"cmake.configureOnOpen": true
 }
