work with 5 800 200 200, need to make it work for optionnal meal

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,7 @@
 NAME = ./philo
 CC = /bin/cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror -g 
+#-fsanitize=thread
 #-fsanitize=thread 
 
 GREEN = \033[0;32m
