--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,7 +2,6 @@ NAME = ./philo
 CC = /bin/cc
 CFLAGS = -Wall -Wextra -Werror -g 
 #-fsanitize=thread
-#-fsanitize=thread 
 
 GREEN = \033[0;32m
 YELLOW = \033[0;33m
@@ -12,6 +11,7 @@ NC = \033[0m
 SRC = parsing.c main.c philo.c utils.c \
 init.c print.c routine.c \
 time.c cleanup.c monitor.c \
+take_actions.c
 
 OBJ_DIR = ./obj
 OBJ = $(SRC:%.c=$(OBJ_DIR)/%.o)
